# mychatapp

./: Procfile  README.md  db.sqlite3  pyproject.toml  render.yaml
accounts/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_groups_and_more.py
backend/: asgi.py  settings.py  urls.py  wsgi.py
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  token_auth.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_message_edited_at_message_is_deleted_and_more.py  0002_reaction.py  0003_message_read_at.py
